# opendoorstation

./: .gitignore  GEMINI.md  Ideas.md  README.md  prototype_step_by_step.md
firmware/esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  config.h  io_button.c  io_button.h  io_relay.c  io_relay.h  sip_logic.c  sip_logic.h  web_server.c  web_server.h
firmware/esp-idf/main/test/: CMakeLists.txt  test_io_button.c  test_io_relay.c  test_sip_logic.c  test_web_server.c
firmware/esp-idf/main/web_root/: index.html  script.js  style.css
